[package]
name = "dbus-async"
version = "2.1.0"
authors = ["LinkTed <link.ted@mailbox.org>"]
description = "Asynchronous DBus library"
readme = "README.md"
keywords = ["dbus", "async"]
license = "BSD-3-Clause"
edition = "2018"
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE"
    ]
repository = "https://github.com/LinkTed/dbus-async"
categories = ["asynchronous"]

[dependencies]
log = "~0.4.14"
futures = "~0.3.12"
dbus-message-parser = "~4.1.0"
dbus-server-address-parser = "~1.0.1"
hex = "~0.4.2"
bytes = "~1.0.1"
lru = "~0.6.3"
libc = "~0.2.84"
bitflags = "~1.2.1"
retain_mut = "~0.1.2"
async-trait = "~0.1.42"
thiserror = "~1.0.23"

[dependencies.tokio]
version = "~1.1.1"
features = ["fs", "net", "io-util"]

[dev-dependencies.tokio]
version = "~1.1.1"
features = ["rt-multi-thread", "macros"]
