[package]
name = "dbus-async"
version = "2.2.1"
authors = ["LinkTed <link.ted@mailbox.org>"]
description = "Asynchronous DBus library"
readme = "README.md"
keywords = ["dbus", "async"]
license = "BSD-3-Clause"
edition = "2018"
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE"
    ]
repository = "https://github.com/LinkTed/dbus-async"
categories = ["asynchronous"]

[dependencies]
log = "~0.4.14"
futures = "~0.3.16"
dbus-message-parser = "~4.2.0"
dbus-server-address-parser = "~1.0.1"
hex = "~0.4.3"
bytes = "~1.0.1"
lru = "~0.6.5"
libc = "~0.2.98"
bitflags = "~1.2.1"
retain_mut = "~0.1.3"
async-trait = "~0.1.50"
thiserror = "~1.0.26"
async-recursion = "~0.3.2"

[dependencies.tokio]
version = "~1.9.0"
features = ["fs", "net", "io-util", "process"]

[dev-dependencies.tokio]
version = "~1.9.0"
features = ["rt-multi-thread", "macros"]
